Fixed dark mode header bits

--- a/shade-for-summer/styles.css
+++ b/shade-for-summer/styles.css
@@ -42,6 +42,9 @@ header {
 	padding-bottom: 0.25em;
 	position: relative;
 	margin-bottom: -1em;
+	
+	color: #444;
+	color-scheme: only light;
 }
 header nav ul { /* General */
 	list-style-type: none;
@@ -58,6 +61,10 @@ header nav div { /* Options */
 	text-align: center;
 	/* Add beige outline for legibility */
 	text-shadow: #fff7d5 0px 0px 2px, #fff7d5 0px 0px 2px, #fff7d5 0px 0px 2px, #fff7d5 0px 0px 2px;
+}
+header a {
+	color: #444;
+	color-scheme: only light;
 }
 /* Letters in the background of the header */
 #letters {
@@ -471,10 +478,11 @@ div.collapsible {
 		color: #eee;
 	}
 	.letter { 
-		fill: #d1a262;
-		stroke: #9f7659;
+		fill: #dba262;
+		stroke: #b77c53;
 	}
-	header nav li {
+	header nav li,
+	header nav div {
 		text-shadow: #d1a262 0px 0px 2px, #d1a262 0px 0px 2px, #d1a262 0px 0px 2px, #d1a262 0px 0px 2px;
 	}
 	.easel {
